<resources>
    <string name="app_name">NomadNest</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <!--    intro screen-->
    <string name="intro1_title">Explore the World, One Tap at a Time!</string>
    <string name="intro2_title">Wander Without Boundaries: Our Travel App Unleashed!</string>
    <string name="intro3_title">Discover, Plan, Go: The Ultimate Travel Companion!</string>
    <string name="intro4_title">Explore More, Worry Less: Let Our App Handle the Rest!</string>

    <string name="intro1_description">Embark on a global adventure with just a tap! Explore the wonders of the world through our interactive app!</string>
    <string name="intro2_description">Discover limitless adventures with Wander Without Boundaries, our unleashed travel app. Explore the world like never before!</string>
    <string name="intro3_description">Discover, Plan, Go: Your ultimate travel companion for seamless adventures, providing expert guidance from start to finish!</string>
    <string name="intro4_description">Discover a stress-free life with our app - Explore More, Worry Less! Let it take care of everything for you!</string>

    <string name="press_back_again">Double tap to exit!</string>

    <string name="lets_explore">Let\'s Explore</string>
    <string name="welcome_title_1">Journey with Confidence</string>
    <string name="welcome_title_2">Your Trusty Travel App Awaits!</string>
    <string name="search_hint">Try \"Belgrade, Serbia\"</string>
    <string name="title_home">Home</string>
    <string name="title_account">Profile</string>
    <string name="title_calender">Calender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_most_popular">Most Popular</string>
    <string name="place_title_1">Banff National Park</string>
    <string name="place_location_1">Alberta, Canada</string>
    <string name="ratings">4.5</string>
    <string name="welcome_message">Welcome to NomadNest!</string>
    <string name="welcome_description">Explore More, Worry Less: Let Our App Handle the Rest!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Passoword?</string>
    <string name="dont_have_account">Don\'t have account?  </string>
    <string name="signup">Sign Up</string>
    <string name="privacy_policy">I agree to the <font color='#2F40C3'>Terms of Service</font> and <font color='#2F40C3'>Privacy Policy</font></string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_an_account_description">Fill up your details so we can help you more efficiently in your travel journey!</string>
    <string name="name">Full Name</string>
    <string name="already_have_account">Already have an account?  </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_back">Back</string>


    <string name="desc_butchart_gardens">The Butchart Gardens is a group of floral display gardens in Brentwood Bay, British Columbia, Canada, located near Victoria on Vancouver Island. The gardens receive over a million visitors each year. The gardens have been designated a National Historic Site of Canada</string>
    <string name="desc_montmorency_falls">The Montmorency Falls is a large waterfall on the Montmorency River in Quebec, Canada.</string>
    <string name="desc_toronto_ilands">The Toronto Islands are a chain of 15 small islands in Lake Ontario, south of mainland Toronto, Ontario, Canad</string>
    <string name="desc_algonquin_provincial_park">Algonquin Provincial Park is in southeastern Ontario, Canada. Its forests, rivers and numerous lakes, including the large Lake of Two Rivers, are home to moose, bears and common loons. The park’s many trails include the Whiskey Rapids Trail, along the Oxtongue River, and the Barron Canyon Trail, with views from the north rim. The Algonquin Logging Museum features a re-created camp and a steam-powered amphibious tug.</string>
    <string name="desc_rideau_canal">The Rideau Canal is a 202 kilometre long canal that links the Ottawa River, at Ottawa, with the Saint Lawrence River at Kingston, Ontario, Canada.</string>
    <string name="desc_niagara_falls">Niagara Falls, Ontario, is a Canadian city at the famous waterfalls of the same name, linked with the U.S. by the Rainbow Bridge. Its site on the Niagara River\'s western shore overlooks the Horseshoe Falls, the cascades\' most expansive section. Elevators take visitors to a lower, wetter vantage point behind the falls. A cliffside park features a promenade alongside 520-ft.-high Skylon Tower with an observation deck</string>
    <string name="user">User</string>
    <string name="test_email">user@example.com</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile_image">Edit Profile Picture</string>
    <string name="open_camera_tile">Open Camera</string>
    <string name="open_camera_question">Are you sure you want to open the camera?</string>
    <string name="title_delete">Delete</string>
    <string name="delete_question">Are you sure you want to remove your account?</string>
    <string name="title_log_out">Log Out</string>
    <string name="log_out_question">Are you sure you want to Log out?</string>
    <string name="user_details">user_details</string>
    <string name="update">Update</string>
    <string name="trip">Trip Destination</string>
    <string name="trip_description">5 Days trip - 4 people</string>

    <string name="category_mountain">Mountains</string>
    <string name="category_nature">Nature</string>
    <string name="category_falls">Falls</string>
    <string name="category_countryside">Countryside</string>

    <string name="demo_price">$1290</string>
    <string name="price_for_people">Price for 1 People</string>
    <string name="book_tour">Book a Tour</string>
    <string name="hint_total_persons">No. of People</string>
    <string name="hint_travelling_date">Travelling Date</string>
    <string name="title_trip_type">Trip Type</string>
    <string name="hint_friend_trip">Friends Trip</string>
    <string name="hint_family_trip">Family Trip</string>
    <string name="title_book_now">Book Now</string>
    <string name="trip_total_cost">Trip Total Cost</string>

    <!-- Error Strings -->
    <string name="err_field_required">This field is required</string>
    <string name="err_fill_all_fields">Please fill all the details</string>
    <string name="err_select_date">Please select the Travelling Date</string>
    <string name="err_no_trip_type">Please select at least one Trip Type!</string>
    <string name="err_value_zero">Please enter the value more than 0!</string>
    <string name="err_select_duration">Please select your Trip Duration</string>
    <string name="err_booking_failed">Booking Failed! Please try again.</string>
    <string name="err_no_user">Invalid Credentials or user does not exist!</string>
    <string name="err_already_exist">User with this email address is already exist!</string>
    <string name="err_pass_not_match">Passwords do not match!</string>
    <string name="err_valid_mail">Please enter a valid email address</string>
    <string name="err_valid_phone">Please enter valid phone number with 10 digits!</string>
    <string name="err_checked_not_privacy">Please read and accept the Privacy Policy!</string>
    <!-- Error Strings -->

    <string name="hint_solo_trip">Solo Trip</string>
    <string name="trip_booked_successfully">Trip Booked Successfully</string>
    <string name="places">Places</string>
    <string name="registered_successfully">Registered Successfully!</string>
    <string name="remove_account">Remove Account</string>
    <string name="support_text">We are Supporting you! Call on +1 999 999 9999.</string>
    <string name="title_about">About</string>
    <string name="dev_info">Developers’ information</string>

    <string name="developer_name">Sorathiya Shubham Pravinbhai\n(8858086)\n\nRuturaj Chandansinh Chavda\n(8870730)\n\nSolanki ArpitKumar NatuBhai\n(8866682)\n\nMansuri Gulammohyuddin Ganibhai\n(8869549)\n\n
    </string>
</resources>